--- a/.github/ISSUE_TEMPLATE/createPr.yml
+++ b/.github/ISSUE_TEMPLATE/createPr.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        "##Release information"
+        "## Release information"
   - type: input
     id: name
     attributes:
@@ -15,6 +15,7 @@ body:
       placeholder: clipContentsDesigner
     validations:
       required: true
+  - type: input
     id: version
     attributes:
       label: Version
