Fix issue template

--- a/.github/ISSUE_TEMPLATE/createPr.yml
+++ b/.github/ISSUE_TEMPLATE/createPr.yml
@@ -1,6 +1,6 @@
 name: Send an add-on
 description: Send an NVDA add-on
-title: "Release information"
+title: "Update add-on
 
 body:
   - type: markdown
