--- a/.github/ISSUE_TEMPLATE/createPr.yml
+++ b/.github/ISSUE_TEMPLATE/createPr.yml
@@ -1,62 +1,58 @@
-name: Bug Report
-description: File a bug report
-title: "[Bug]: "
-labels: [bug, triage]
-assignees:
-  - octocat
+name: Update add-on
+description: Update an NVDA add-on
+title: "[Add-on]: "
+
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thanks for sending this add-on!
   - type: input
-    id: contact
+    id: name
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
-  - type: textarea
-    id: what-happened
-    attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
+      label: Add-on name
+      description: Internal name of the add-on
+      placeholder: clipContentsDesigner
     validations:
       required: true
-  - type: dropdown
+  - type: input
+    id: author
+    attributes:
+      label: Author
+      description: Add-on authors
+      placeholder: Jon Doe
+    validations:
+      required: true
+  - type: input
     id: version
     attributes:
       label: Version
-      description: What version of our software are you running?
-      options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
+      description: Add-on version
+      placeholder: 16.1
     validations:
       required: true
-  - type: dropdown
-    id: browsers
+  - type: input
+    id: repo
     attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
+      label: Repository
+      description: Add-on repository
+      placeholder: https://github.com/nvdaes/placeMarkers
+    validations:
+      required: true
+  - type: input
+    id: key
+    attributes:
+      label: Key
+      description: Key in get.php
+      placeholder: ccd
+    validations:
+      required: true
+- type: checkboxes
+    id: updateDev
+    attributes:
+      label: Dev link like stable
+      description: The destination link for dev is like stable
       options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
-    attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
+        - label: The destination for dev and stable download links are the same
+    validations:
+      required: false
