--- a/.github/ISSUE_TEMPLATE/createPr.yml
+++ b/.github/ISSUE_TEMPLATE/createPr.yml
@@ -23,3 +23,11 @@ body:
       placeholder: Jon Doe
     validations:
       required: true
+  - type: input
+    id: version
+    attributes:
+      label: Version
+      description: Add-on version
+      placeholder: 16.1
+    validations:
+      required: true
