--- a/.github/workflows/checkAddonMetadata.yaml
+++ b/.github/workflows/checkAddonMetadata.yaml
@@ -25,7 +25,12 @@ jobs:
       uses: actions/checkout@v2    
       with:
         ref: addonFiles
-        submodules: true
         path: validate
+    - name: Checkout configobj
+      uses: actions/checkout@v2    
+      with:
+        repository: DiffSK/configobj: 
+        path: validate/_validate/configobj
+        ref: f9a265c4
     - name: Validate metadata
       run: python validate/_validate/validate.py https://github.com/nvdaes/clipContentsDesigner/releases/download/14.0/clipContentsDesigner-14.0.nvda-addon
