--- a/.github/workflows/checkAddonMetadata.yaml
+++ b/.github/workflows/checkAddonMetadata.yaml
@@ -31,6 +31,7 @@ jobs:
       uses: actions/checkout@v2    
       with:
         repository: DiffSK/configobj
+        submodules: true
         path: validate/_validate/configobj
     - name: Validate metadata
       run: |
