--- a/.github/workflows/checkAddonMetadata.yaml
+++ b/.github/workflows/checkAddonMetadata.yaml
@@ -24,8 +24,8 @@ jobs:
     - name: Checkout validate add-on metadata
       uses: actions/checkout@v2    
       with:
+        repository: nvdaes/validateNvdaaddonMetadata
         ref: addonFiles
-        submodules: true
         path: validate
     - name: Validate metadata
       run: python validate/_validate/validate.py https://github.com/nvdaes/clipContentsDesigner/releases/download/14.0/clipContentsDesigner-14.0.nvda-addon
