--- a/.github/workflows/checkAddonMetadata.yaml
+++ b/.github/workflows/checkAddonMetadata.yaml
@@ -41,5 +41,5 @@ jobs:
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: fs.readFileSync('_validate/metadata.txt')
+            body: fs.readFileSync('_validate/metadata.txt', 'utf-8')
           })
